Fix dark mode background

--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
   --secondary-color: #EFEFEF;
   --text-color: #000000;
   --theme-color: #FF7979;
+  --bg-color: #FF7979;
 }
 
 button{
@@ -21,7 +22,7 @@ button:active, button:hover{
 
 body{
   transition: 1s;
-  background-color: var(--theme-color);
+  background-color: var(--bg-color);
   height: 100vh;
   display: flex;
   flex-direction: column;
